<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.example.bmicalculator.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeFragment_to_BmiFragment"
            app:destination="@id/BmiFragment" />
    </fragment>

    <fragment
        android:id="@+id/BmiFragment"
        android:name="com.example.bmicalculator.BmiFragment"
        android:label="@string/nav_bmi"
        tools:layout="@layout/fragment_bmi" />

    <fragment
        android:id="@+id/CaloriesFragment"
        android:name="com.example.bmicalculator.CaloriesFragment"
        android:label="@string/nav_calories"
        tools:layout="@layout/fragment_calories" />

    <fragment
        android:id="@+id/RecipesFragment"
        android:name="com.example.bmicalculator.RecipesFragment"
        android:label="@string/nav_recipes"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/RecipeDetailsFragment"
        android:name="com.example.bmicalculator.RecipeDetailsFragment"
        android:label="Szczegóły przepisu"
        tools:layout="@layout/fragment_recipe_details" />

</navigation>