<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingListFragment">

    <TextView
        android:id="@+id/textViewShoppingListTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shopping_list_title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewRecipeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="italic"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/textViewShoppingListTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewShoppingList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/textViewRecipeTitle"
        app:layout_constraintBottom_toTopOf="@id/buttonClearCompleted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonClearCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_completed"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewEmptyList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_shopping_list"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/recyclerViewShoppingList"
        app:layout_constraintBottom_toBottomOf="@id/recyclerViewShoppingList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout> 